K8s-App/flask-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: localhost/my-flask-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
